--- a/testbench/index.html
+++ b/testbench/index.html
@@ -3,10 +3,16 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite App</title>
+  <title>Pusher Testbench</title>
 </head>
 <body>
-  <div id="app">Hello Vite!</div>
+  <h1>Pusher Testbench</h1>
+  <div>
+    <label>Message: <input type="text" id="message-input" /></label>
+    <button id="send-btn">Send</button>
+  </div>
+  <pre id="log"></pre>
+  <script src="https://unpkg.com/pusher-js@8.4.0/dist/web/pusher.min.js"></script>
   <script type="module" src="/src/main.js"></script>
 </body>
 </html>
